syntax = "proto3";
package cache_server;

service Cache {
    rpc Get (GetRequest) returns (stream GetResponse);
    rpc Put (stream PutRequest) returns (PutResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    bool   successful = 1;
    bytes  value = 2;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse {
    bool successful = 1;
}

message DeleteRequest {
    bytes key = 1;
}

message DeleteResponse {
    bool   successful = 1;
}